public/styles/past-tweets.css
article {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  border: 3px solid black;
  margin-top: 2em;
  font-family: 'Source sans pro', sans-serif;
}
article:hover {
  box-shadow: 0 0 11px #6e6d6d;
}
header {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  padding-left: 1.5em;
}

#avatarName {
  display: flex;
  flex-direction: row;
  justify-self: space-evenly;
}
#username {
  display: flex;
  justify-self: flex-end;
  padding-right: 1.5em;
}
#past-tweet {
  display: flex;
  justify-self: flex-start;
  padding-left: 1.5em;
  padding-right:1.5em;
  border-bottom: 2px solid black;
}
footer {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  padding-left:1.5em;
  padding-right:1.5em;
}
#icons {
  justify-self: flex-end;
  flex-direction: row-reverse;
}
i:hover {
  color:#ffff41;
}

